--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -16,12 +16,12 @@
         android:paddingBottom="0dp">
 
         <Button
+            android:id="@+id/slidingMenuButton"
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_25sdp"
             android:background="@color/pankaj_pad_numeric_background_color_white"
             android:gravity="center_horizontal"
             android:text="..."
-            android:onClick="openMymenu"
             android:textColor="@color/pankaj_dark_orange"
             android:textSize="@dimen/_20sdp"
             android:textStyle="bold" />
