--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="pankaj_pad_button_memory_text_color">#fefb45</color>
     <color name="pankaj_light_grey">#767676</color>
     <!--<color name="pankaj_light_pink">#FF4081</color>-->
+
+    <color name="pankaj_dark_red">#ff2604</color>
+    <color name="pankaj_dark_blue">#303F9F</color>
+    <color name="pankaj_dark_green">#4c9140</color>
     <color name="pankaj_light_pink">#ffe8f0</color>
     <color name="pankaj_dark_pink">#FF4081</color>
     <color name="pankaj_dark_bright_pink">#fe0073</color>
