--- a/app/src/main/res/layout/activity_calculator_settings.xml
+++ b/app/src/main/res/layout/activity_calculator_settings.xml
@@ -33,7 +33,10 @@
             android:text="Vibrate on Touch"
             app:layout_columnWeight="1" />
 
-        <CheckBox app:layout_columnWeight="1" />
+        <CheckBox
+            android:id="@+id/settingsVibrateKeys"
+            android:onClick="setCalculatorSettings"
+            app:layout_columnWeight="1" />
         <!-- Row 0 ends -->
 
 
@@ -58,7 +61,10 @@
             android:text="Limit Precision to 2 digis"
             app:layout_columnWeight="1" />
 
-        <CheckBox app:layout_columnWeight="1" />
+        <CheckBox
+            android:id="@+id/settingsPrecisionTwoDigits"
+            android:onClick="setCalculatorSettings"
+            app:layout_columnWeight="1" />
         <!-- Row 1 ends -->
 
         <!-- Row 2 starts -->
@@ -132,30 +138,30 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Others"/>
+        android:text="Others" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Share this Appp"/>
+        android:text="Share this Appp" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Send Feedback"/>
+        android:text="Send Feedback" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Rate this app"/>
+        android:text="Rate this app" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Upgrade (Ad-free version)"/>
+        android:text="Upgrade (Ad-free version)" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="About"/>
+        android:text="About" />
 </LinearLayout>
