cleanup started for equation

--- a/app/src/main/res/layout/activity_calculator_settings.xml
+++ b/app/src/main/res/layout/activity_calculator_settings.xml
@@ -34,7 +34,7 @@
             app:layout_columnWeight="1" />
 
         <CheckBox
-            android:id="@+id/settingsVibrateKeys"
+            android:id="@+id/settingsVibrateOnTouch"
             android:onClick="setCalculatorSettings"
             app:layout_columnWeight="1" />
         <!-- Row 0 ends -->
