--- a/app/src/main/res/layout/mylayout_phone_with_drawer.xml
+++ b/app/src/main/res/layout/mylayout_phone_with_drawer.xml
@@ -41,13 +41,13 @@
     <!-- Container for contents of drawer -
     use NavigationView to make configuration easier -->
 
-    <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/calculator_menu" />
+    <!--<android.support.design.widget.NavigationView-->
+        <!--android:id="@+id/nav_view"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_gravity="start"-->
+        <!--android:fitsSystemWindows="true"-->
+        <!--app:headerLayout="@layout/nav_header"-->
+        <!--app:menu="@menu/calculator_menu" />-->
 
 </android.support.v4.widget.DrawerLayout>
