--- a/app/src/main/res/menu/calculator_font_style.xml
+++ b/app/src/main/res/menu/calculator_font_style.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-</menu>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/Font-Thin"
+            android:title="Font Thin" />
+        <item
+            android:id="@+id/Font-Normal"
+            android:title="Font Normal" />
+        <item
+            android:id="@+id/Font-Bold"
+            android:title="Font Bold" />
+    </group>
+</menu><!--android:icon="@drawable/ic_menu_camera"-->
