--- a/app/src/main/res/menu/calculator_keypad_style.xml
+++ b/app/src/main/res/menu/calculator_keypad_style.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-</menu>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/Keypad-Default"
+            android:title="Keypad Default" />
+        <item
+            android:id="@+id/Keypad-Friendly"
+            android:title="Keypad Friendly" />
+    </group>
+</menu><!--android:icon="@drawable/ic_menu_camera"-->
