--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,22 @@
 
     </style>
 
+    <style name="PadButtonStyle.Settings" parent="PadButtonStyle">
+        <!--<item name="android:layout_width">wrap_content</item>-->
+        <!--<item name="android:layout_height">wrap_content</item>-->
+        <!--<item name="android:background">@drawable/pad_button_background</item>-->
+        <item name="fontFamily">sans-serif-light</item>
+        <item name="android:textSize">@dimen/_40sdp</item>
+        <!--<item name="android:gravity">center</item>-->
+        <!--<item name="android:includeFontPadding">false</item>-->
+        <!--<item name="android:minWidth">0dip</item>-->
+        <!--<item name="android:minHeight">0dip</item>-->
+        <!--<item name="android:textAllCaps">false</item>-->
+        <!--<item name="android:textColor">@color/pankaj_pad_button_text_color_black</item>-->
+        <item name="android:textColor">@color/pankaj_results_text_color</item>
+
+    </style>
+
     <style name="DisplayTextStyle.Memory" parent="DisplayTextStyle">
         <!--<item name="android:layout_width">wrap_content</item>-->
         <!--<item name="android:layout_height">wrap_content</item>-->
