--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -21,8 +21,8 @@
             android:layout_height="@dimen/_25sdp"
             android:background="@color/pankaj_pad_numeric_background_color_white"
             android:gravity="center_horizontal"
-            android:text="..."
             android:onClick="changeMySettings"
+            android:text="..."
             android:textColor="@color/pankaj_dark_orange"
             android:textSize="@dimen/_20sdp"
             android:textStyle="bold" />
@@ -52,6 +52,7 @@
         android:editable="false"
         android:gravity="center|end"
         android:maxLines="1"
+        android:onClick="showHistory"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="0"
@@ -75,4 +76,31 @@
         android:text="0"
         android:textColor="@color/pankaj_results_text_color"
         android:textSize="@dimen/_28sdp" />
+
+    <LinearLayout
+        android:id="@+id/editTextHistory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:visibility="gone">
+
+        <EditText
+            style="@style/DisplayTextStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".2"
+            android:background="@color/pankaj_pad_button_text_color_white"
+            android:editable="false"
+            android:gravity="center|end"
+            android:inputType="text"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:maxLines="1"
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
+            android:scrollHorizontally="true"
+            android:text="I am History"
+            android:textColor="@color/pankaj_results_text_color"
+            android:textSize="@dimen/_30sdp"/>
+    </LinearLayout>
+
 </LinearLayout>
