--- a/app/src/main/res/layout/mylayout_phone.xml
+++ b/app/src/main/res/layout/mylayout_phone.xml
@@ -47,7 +47,7 @@
         android:layout_weight="1" />
 
     <include android:id="@+id/padTestId"
-        layout="@layout/pad_standard_1"
+        layout="@layout/pad_standard_default"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
