--- a/app/src/main/res/layout/mylayout_phone_with_drawer.xml
+++ b/app/src/main/res/layout/mylayout_phone_with_drawer.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1" />
 
         <include
-            layout="@layout/pad_standard_1"
+            layout="@layout/pad_standard_default"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
