--- a/app/src/main/res/layout/pad_standard_default.xml
+++ b/app/src/main/res/layout/pad_standard_default.xml
@@ -28,7 +28,7 @@
     <!--<TableRow>-->
     <Button
         android:id="@+id/buttonMemoryClear"
-        style="?buttonMemory"
+        style="@style/PadButtonStyle.Numeric.Memory"
         android:onClick="saveInMemory"
         android:tag="mc"
         android:text="mc"
@@ -36,7 +36,7 @@
 
     <Button
         android:id="@+id/buttonMemoryPlus"
-        style="?buttonMemory"
+        style="@style/PadButtonStyle.Numeric.Memory"
         android:onClick="saveInMemory"
         android:tag="m+"
         android:text="m+"
@@ -44,7 +44,7 @@
 
     <Button
         android:id="@+id/buttonMemoryMinus"
-        style="?buttonMemory"
+        style="@style/PadButtonStyle.Numeric.Memory"
         android:onClick="saveInMemory"
         android:tag="m-"
         android:text="m-"
@@ -52,7 +52,7 @@
 
     <Button
         android:id="@+id/buttonMemoryRead"
-        style="?buttonMemory"
+        style="@style/PadButtonStyle.Numeric.Memory"
         android:onClick="saveInMemory"
         android:tag="mr"
         android:text="mr"
@@ -64,7 +64,7 @@
     <!--<TableRow>-->
     <Button
         android:id="@+id/buttonPercentage"
-        style="?buttonOperator"
+        style="@style/PadButtonStyle.Numeric.Operator"
         android:onClick="calculateMe"
         android:tag="%"
         android:text="%"
@@ -74,7 +74,7 @@
 
     <!--<Button-->
     <!--android:id="@+id/buttonBack"-->
-    <!--style="?buttonOperator"-->
+    <!--style="@style/PadButtonStyle.Numeric.Operator"-->
     <!--app:layout_columnWeight="1"-->
     <!--android:onClick="calculateMe"-->
     <!--android:tag="BACK"-->
@@ -82,7 +82,7 @@
 
     <!--<ImageButton-->
         <!--android:id="@+id/buttonBack"-->
-        <!--style="?buttonOperator"-->
+        <!--style="@style/PadButtonStyle.Numeric.Operator"-->
         <!--android:onClick="calculateMe"-->
         <!--android:src="@drawable/ic_backspace_white_mid_48dp"-->
         <!--android:adjustViewBounds="false"-->
@@ -99,7 +99,7 @@
 
     <ImageButton
         android:id="@+id/buttonBack"
-        style="?buttonOperator"
+        style="@style/PadButtonStyle.Numeric.Operator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="calculateMe"
@@ -114,14 +114,14 @@
 
 
     <!--<ImageButton android:id="@+id/previous"-->
-    <!--style="?buttonOperator"-->
+    <!--style="@style/PadButtonStyle.Numeric.Operator"-->
     <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
     <!--android:src="@drawable/ic_backspace_white_48dp"</ImageButton>-->
 
     <Button
         android:id="@+id/buttonAllClear"
-        style="?buttonOperator"
+        style="@style/PadButtonStyle.Numeric.Operator"
         android:onClick="clearAll"
         android:tag="ALLCLEAR"
         android:text="C"
@@ -129,7 +129,7 @@
 
     <Button
         android:id="@+id/buttonDivide"
-        style="?buttonOperator"
+        style="@style/PadButtonStyle.Numeric.Operator"
         android:onClick="calculateMe"
         android:tag="÷"
         android:text="÷"
@@ -142,7 +142,7 @@
     <!--<TableRow>-->
     <Button
         android:id="@+id/button7"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="7"
         android:text="7"
@@ -150,7 +150,7 @@
 
     <Button
         android:id="@+id/button8"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="8"
         android:text="8"
@@ -158,7 +158,7 @@
 
     <Button
         android:id="@+id/button9"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="9"
         android:text="9"
@@ -166,7 +166,7 @@
 
     <Button
         android:id="@+id/buttonMultiply"
-        style="?buttonOperator"
+        style="@style/PadButtonStyle.Numeric.Operator"
         android:onClick="calculateMe"
         android:tag="x"
         android:text="x"
@@ -177,7 +177,7 @@
     <!--<TableRow>-->
     <Button
         android:id="@+id/button4"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="4"
         android:text="4"
@@ -185,7 +185,7 @@
 
     <Button
         android:id="@+id/button5"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="5"
         android:text="5"
@@ -193,7 +193,7 @@
 
     <Button
         android:id="@+id/button6"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="6"
         android:text="6"
@@ -201,7 +201,7 @@
 
     <Button
         android:id="@+id/buttonSubtract"
-        style="?buttonOperator"
+        style="@style/PadButtonStyle.Numeric.Operator"
         android:onClick="calculateMe"
         android:tag="-"
         android:text="-"
@@ -213,7 +213,7 @@
     <!--<TableRow>-->
     <Button
         android:id="@+id/button1"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="1"
         android:text="1"
@@ -221,7 +221,7 @@
 
     <Button
         android:id="@+id/button2"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="2"
         android:text="2"
@@ -229,7 +229,7 @@
 
     <Button
         android:id="@+id/button3"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="3"
         android:text="3"
@@ -237,7 +237,7 @@
 
     <Button
         android:id="@+id/buttonAdd"
-        style="?buttonOperator"
+        style="@style/PadButtonStyle.Numeric.Operator"
         android:onClick="calculateMe"
         android:tag="+"
         android:text="+"
@@ -250,7 +250,7 @@
 
     <Button
         android:id="@+id/buttonSignChange"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="+/-"
         android:text="+/-"
@@ -258,7 +258,7 @@
 
     <Button
         android:id="@+id/button0"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="0"
         android:text="0"
@@ -266,7 +266,7 @@
 
     <Button
         android:id="@+id/buttonDecimal"
-        style="?buttonNumeric"
+        style="@style/PadButtonStyle.Numeric"
         android:onClick="calculateMe"
         android:tag="."
         android:text="."
@@ -274,7 +274,7 @@
 
     <Button
         android:id="@+id/buttonEquals"
-        style="?buttonEvaluate"
+        style="@style/PadButtonStyle.Numeric.Equals"
         android:onClick="calculateMe"
         android:tag="="
         android:text="="
