--- a/app/src/main/res/menu/calculator_theme.xml
+++ b/app/src/main/res/menu/calculator_theme.xml
@@ -2,19 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/Material-Green"
-            android:title="Material-Green" />
+            android:id="@+id/Material-Golden"
+            android:title="Amaya Favourite" />
         <item
             android:id="@+id/Material-Blue"
             android:title="Material-Blue" />
         <item
-            android:id="@+id/Material-Red"
-            android:title="Material-Red" />
+            android:id="@+id/Material-Green"
+            android:title="Material-Green" />
+        <item
+            android:id="@+id/Material-Orange"
+            android:title="Material-Orange" />
         <item
             android:id="@+id/Material-Pink"
             android:title="Material-Pink" />
         <item
-            android:id="@+id/Material-Orange"
-            android:title="Material-Orange" />
+            android:id="@+id/Material-Red"
+            android:title="Material-Red" />
+
+
     </group>
 </menu><!--android:icon="@drawable/ic_menu_camera"-->
