--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,6 +89,12 @@
         <item name="android:background">@color/amaya_favourite_color</item>
     </style>
 
+    <style name="PadButtonStyle.Numeric.Operator.Pink" parent="PadButtonStyle.Numeric">
+        <item name="android:textColor">@color/pankaj_pad_button_text_color_white</item>
+        <!--<item name="android:textColor">@color/pankaj_pad_button_text_color</item>-->
+        <item name="android:background">@color/pankaj_dark_pink</item>
+    </style>
+
     <style name="PadButtonStyle.Numeric.Memory" parent="PadButtonStyle.Numeric.Operator">
         <item name="android:paddingBottom">5dp</item>
         <item name="android:paddingTop">5dp</item>
