cleanup started for equation

--- a/app/src/main/res/layout/pad_standard_default.xml
+++ b/app/src/main/res/layout/pad_standard_default.xml
@@ -274,7 +274,7 @@
 
     <Button
         android:id="@+id/buttonEquals"
-        style="@style/PadButtonStyle.Numeric.Equals"
+        style="@style/PadButtonStyle.Numeric.Evaluate"
         android:onClick="calculateMe"
         android:tag="="
         android:text="="
