--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -261,7 +261,7 @@
 
     <Button
         android:id="@+id/buttonEquals"
-        style="@style/PadButtonStyle.Numeric.Equals"
+        style="@style/PadButtonStyle.Numeric.Evaluate"
         android:onClick="calculateMe"
         android:tag="="
         android:text="="
