--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,13 +23,14 @@
 
     </style>
 
-    <style name="PadButtonStyle.Settings" parent="PadButtonStyle">
+    <style name="PadButtonStyle.Settings">
         <!--<item name="android:layout_width">wrap_content</item>-->
         <!--<item name="android:layout_height">wrap_content</item>-->
         <!--<item name="android:background">@drawable/pad_button_background</item>-->
-        <item name="fontFamily">sans-serif-light</item>
-        <item name="android:textSize">@dimen/_40sdp</item>
-        <!--<item name="android:gravity">center</item>-->
+        <item name="fontFamily">sans-serif-normal</item>
+        <item name="android:textSize">@dimen/_20sdp</item>
+        <item name="android:gravity">start</item>
+        <item name="android:paddingLeft">@dimen/_10sdp</item>
         <!--<item name="android:includeFontPadding">false</item>-->
         <!--<item name="android:minWidth">0dip</item>-->
         <!--<item name="android:minHeight">0dip</item>-->
