--- a/app/src/main/res/layout/activity_calculator_settings.xml
+++ b/app/src/main/res/layout/activity_calculator_settings.xml
@@ -15,22 +15,9 @@
 
         <!-- Row 0 starts -->
 
-        <!--<ImageButton-->
-            <!--style="@style/PadButtonStyle.Numeric.Operator"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:adjustViewBounds="false"-->
-            <!--android:padding="0dp"-->
-            <!--android:scaleType="centerInside"-->
-            <!--android:src="@drawable/ic_backspace_pankaj"-->
-            <!--app:layout_columnWeight="1"-->
-            <!--app:layout_gravity="fill"-->
-            <!--app:layout_rowWeight="1" />-->
-
-
         <TextView
             style="@style/PadButtonStyle.Settings"
-            android:layout_width="@dimen/_200sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Vibration on key touch"
             app:layout_columnWeight="1" />
@@ -39,28 +26,16 @@
             android:id="@+id/settingsVibrateOnTouch"
             style="@style/PadButtonStyle.Settings"
             android:onClick="setCalculatorSettings"
+            android:layout_gravity="center"
             app:layout_columnWeight="1" />
         <!-- Row 0 ends -->
 
 
         <!-- Row 1 starts -->
 
-        <!--<ImageButton-->
-            <!--style="@style/PadButtonStyle.Numeric.Operator"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:adjustViewBounds="false"-->
-            <!--android:padding="0dp"-->
-            <!--android:scaleType="centerInside"-->
-            <!--android:src="@drawable/ic_backspace_pankaj"-->
-            <!--app:layout_columnWeight="1"-->
-            <!--app:layout_gravity="fill"-->
-            <!--app:layout_rowWeight="1" />-->
-
-
         <TextView
             style="@style/PadButtonStyle.Settings"
-            android:layout_width="@dimen/_200sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Limit precision 2 digits"
             app:layout_columnWeight="1" />
@@ -69,27 +44,16 @@
             android:id="@+id/settingsPrecisionTwoDigits"
             style="@style/PadButtonStyle.Settings"
             android:onClick="setCalculatorSettings"
+            android:layout_gravity="center"
             app:layout_columnWeight="1" />
         <!-- Row 1 ends -->
 
         <!-- Row 0 starts -->
 
-        <!--<ImageButton-->
-            <!--style="@style/PadButtonStyle.Numeric.Operator"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:adjustViewBounds="false"-->
-            <!--android:padding="0dp"-->
-            <!--android:scaleType="centerInside"-->
-            <!--android:src="@drawable/ic_backspace_pankaj"-->
-            <!--app:layout_columnWeight="1"-->
-            <!--app:layout_gravity="fill"-->
-            <!--app:layout_rowWeight="1" />-->
-
 
         <TextView
             style="@style/PadButtonStyle.Settings"
-            android:layout_width="@dimen/_200sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Thousand's seperator"
             app:layout_columnWeight="1" />
@@ -98,27 +62,17 @@
             android:id="@+id/settingsCommaAfterThousand"
             style="@style/PadButtonStyle.Settings"
             android:onClick="setCalculatorSettings"
+            android:layout_gravity="center"
             app:layout_columnWeight="1" />
         <!-- Row 0 ends -->
 
 
         <!-- Row 2 starts -->
-        <!--<ImageButton-->
-            <!--style="@style/PadButtonStyle.Numeric.Operator"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:adjustViewBounds="false"-->
-            <!--android:padding="0dp"-->
-            <!--android:scaleType="centerInside"-->
-            <!--android:src="@drawable/ic_backspace_pankaj"-->
-            <!--app:layout_columnWeight="1"-->
-            <!--app:layout_gravity="fill"-->
-            <!--app:layout_rowWeight="1" />-->
 
         <TextView
             android:id="@+id/settingsKeypadLayout"
             style="@style/PadButtonStyle.Settings"
-            android:layout_width="@dimen/_200sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="openThemeSettings"
             android:text="Keypad Layout"
@@ -130,25 +84,14 @@
         <!-- Row 2 ends -->
 
         <!-- Row 3 starts -->
-        <!--<ImageButton-->
-            <!--style="@style/PadButtonStyle.Numeric.Operator"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:adjustViewBounds="false"-->
-            <!--android:padding="0dp"-->
-            <!--android:scaleType="centerInside"-->
-            <!--android:src="@drawable/ic_backspace_pankaj"-->
-            <!--app:layout_columnWeight="1"-->
-            <!--app:layout_gravity="fill"-->
-            <!--app:layout_rowWeight="1" />-->
 
         <TextView
             android:id="@+id/settingsTheme"
             style="@style/PadButtonStyle.Settings"
-            android:layout_width="@dimen/_200sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="openThemeSettings"
-            android:text="Theme"
+            android:text="Theme\nCurrent Theme"
             app:layout_columnWeight="1" />
 
         <TextView
@@ -157,22 +100,11 @@
         <!-- Row 3 ends -->
 
         <!-- Row 3 starts -->
-        <!--<ImageButton-->
-            <!--style="@style/PadButtonStyle.Numeric.Operator"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:adjustViewBounds="false"-->
-            <!--android:padding="0dp"-->
-            <!--android:scaleType="centerInside"-->
-            <!--android:src="@drawable/ic_backspace_pankaj"-->
-            <!--app:layout_columnWeight="1"-->
-            <!--app:layout_gravity="fill"-->
-            <!--app:layout_rowWeight="1" />-->
 
         <TextView
             android:id="@+id/settingsFontType"
             style="@style/PadButtonStyle.Settings"
-            android:layout_width="@dimen/_200sdp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="openThemeSettings"
             android:text="Font Type"
@@ -184,30 +116,19 @@
         <!-- Row 3 ends -->
 
         <!-- Row 3 starts -->
-        <!--<ImageButton-->
-            <!--style="@style/PadButtonStyle.Numeric.Operator"-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/settingsDisplayFormat"-->
+            <!--style="@style/PadButtonStyle.Settings"-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
-            <!--android:adjustViewBounds="false"-->
-            <!--android:padding="0dp"-->
-            <!--android:scaleType="centerInside"-->
-            <!--android:src="@drawable/ic_backspace_pankaj"-->
-            <!--app:layout_columnWeight="1"-->
-            <!--app:layout_gravity="fill"-->
-            <!--app:layout_rowWeight="1" />-->
+            <!--android:onClick="openThemeSettings"-->
+            <!--android:text="Display Format"-->
+            <!--app:layout_columnWeight="1" />-->
 
-        <TextView
-            android:id="@+id/settingsDisplayFormat"
-            style="@style/PadButtonStyle.Settings"
-            android:layout_width="@dimen/_200sdp"
-            android:layout_height="wrap_content"
-            android:onClick="openThemeSettings"
-            android:text="Display Format"
-            app:layout_columnWeight="1" />
-
-        <TextView
-            style="@style/PadButtonStyle.Settings"
-            app:layout_columnWeight="1" />
+        <!--<TextView-->
+            <!--style="@style/PadButtonStyle.Settings"-->
+            <!--app:layout_columnWeight="1" />-->
         <!-- Row 3 ends -->
 
     </GridLayout>
