--- a/app/src/main/res/layout/activity_calculator_settings.xml
+++ b/app/src/main/res/layout/activity_calculator_settings.xml
@@ -86,7 +86,7 @@
         <!-- Row 3 starts -->
 
         <TextView
-            android:id="@+id/settingsTheme"
+            android:id="@+id/settingsThemeTextView"
             style="@style/PadButtonStyle.Settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
